...
              width: 50.w,
              height: 30.h,
            ),
            SizedBox(height: 2.h),

            Text(
              'Booking Confirmed!',
              style: GoogleFonts.inter(
                color: AppColors.textPrimary,
                fontWeight: FontWeight.bold,
                fontSize: 22.sp,
              ),
            ),
...
